--- a/js assignments/task/index.html
+++ b/js assignments/task/index.html
@@ -4,10 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Class task</title>
 </head>
 
 <body>
+
+    <!-- <main>
+        <div class="container">
+            <h1>Palindrome Checker</h1>
+            <form>
+                <input id="input" type="text" required placeholder="Enter any name or word">
+                <input type="submit" class="btn" value="Check" id="btn">
+            </form>
+            <h3 id="result">Hi</h3>
+        </div>
+    </main> -->
+
 
 </body>
 
